--- a/.github/workflows/shoorka.yaml
+++ b/.github/workflows/shoorka.yaml
@@ -12,41 +12,41 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # - name: Setup Terraform
-      #   uses: hashicorp/setup-terraform@v1
-      #   with:
-      #     terraform_wrapper: false
-
-      # - name: Format Terraform configuration
-      #   id: fmt
-      #   working-directory: ./terraform
-      #   run: terraform fmt
-
-      # - name: Initialize Terraform
-      #   id: init
-      #   working-directory: ./terraform
-      #   run: terraform init
-
-      # - name: Validate Terraform configuration
-      #   id: validate
-      #   working-directory: ./terraform
-      #   run: terraform validate
-
-      # - name: Plan Terraform configuration
-      #   id: plan
-      #   working-directory: ./terraform
-      #   run: terraform plan
-
-      # - name: Apply Terraform configuration
-      #   id: apply
-      #   working-directory: ./terraform
-      #   run: terraform apply -auto-approve
-
       - name: Cache node_modules
         uses: actions/setup-node@v2
         with:
           node-version: "14"
           cache: "npm"
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_wrapper: false
+
+      - name: Format Terraform configuration
+        id: fmt
+        working-directory: ./terraform
+        run: terraform fmt
+
+      - name: Initialize Terraform
+        id: init
+        working-directory: ./terraform
+        run: terraform init
+
+      - name: Validate Terraform configuration
+        id: validate
+        working-directory: ./terraform
+        run: terraform validate
+
+      - name: Plan Terraform configuration
+        id: plan
+        working-directory: ./terraform
+        run: terraform plan
+
+      - name: Apply Terraform configuration
+        id: apply
+        working-directory: ./terraform
+        run: terraform apply -auto-approve
 
       - name: Install dependencies
         run: npm install
@@ -54,5 +54,5 @@ jobs:
       - name: Build app
         run: npm run build
 
-      - name: Where am i
-        run: cd ./build && ls -la
+      - name: Push site
+        run: aws s3 sync ./build s3://$(terraform output -raw bucket_name)
