--- a/.github/workflows/shoorka.yaml
+++ b/.github/workflows/shoorka.yaml
@@ -8,7 +8,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      REGION: ${{ secrets.REGION }}
+      AWS_REGION: ${{ secrets.REGION }}
 
     steps:
       - name: Checkout
@@ -57,4 +57,5 @@ jobs:
         run: npm run build
 
       - name: Push site
-        run: aws s3 sync ./build s3://shoorkathevarenik.com
+        working-directory: ./terraform
+        run: aws s3 sync ../build s3://shoorkathevarenik.com
