--- a/.github/workflows/shoorka.yaml
+++ b/.github/workflows/shoorka.yaml
@@ -58,4 +58,4 @@ jobs:
 
       - name: Push site
         working-directory: ./terraform
-        run: aws s3 sync ../build s3://shoorkathevarenik.com
+        run: aws s3 sync ../build s3://$(terraform output -raw bucket_name)
